[package]
name = "serde_urlencoded"
version = "0.7.1" # bump in documentation link and in README on update
authors = ["Anthony Ramine <n.oxyde@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nox/serde_urlencoded"
documentation = "https://docs.rs/serde_urlencoded/0.7.1/serde_urlencoded/"
description = "`x-www-form-urlencoded` meets Serde"
categories = ["encoding", "web-programming"]
keywords = ["serde", "serialization", "urlencoded"]
exclude = ["/.travis.yml", "/bors.toml"]
edition = "2018"

[badges]
travis-ci = {repository = "nox/serde_urlencoded"}

[lib]
test = false

[features]
default = ["std"]
std = []

[dependencies]
form_urlencoded = { version = "1", default_features = false, features = [
	"alloc",
] }
itoa = "1"
ryu = "1"
serde = { version = "1.0.69", default_features = false, features = ["alloc"] }

[dev-dependencies]
serde_derive = "1"
